rust/foxglove/src/protocol/v1/snapshots/foxglove__protocol__v1__client__tests__message_data_encode.snap
---
source: rust/foxglove/src/protocol/v1/client.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x01,
    0x1e,
    0x00,
    0x00,
    0x00,
    0x7b,
    0x22,
    0x6b,
    0x65,
    0x79,
    0x22,
    0x3a,
    0x20,
    0x22,
    0x76,
    0x61,
    0x6c,
    0x75,
    0x65,
    0x22,
    0x7d,
]
