rust/foxglove/src/protocol/v1/snapshots/foxglove__protocol__v1__client__tests__playback_control_request_encode_play_with_seek.snap
---
source: rust/foxglove/src/protocol/v1/client.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x03,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x01,
    0x15,
    0xcd,
    0x5b,
    0x07,
    0x00,
    0x00,
    0x00,
    0x00,
    0x07,
    0x00,
    0x00,
    0x00,
    0x73,
    0x6f,
    0x6d,
    0x65,
    0x2d,
    0x69,
    0x64,
]
